<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bck4"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ATMLocator">

    <EditText
        android:id="@+id/iplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:hint="Enter a place" />

    <Button
        android:id="@+id/isearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="Search" />
    <Button
        android:id="@+id/ihome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Home"
        android:layout_marginTop="130dp"/>

</LinearLayout>